# Virtuus

./: .gitignore  .kanbus.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING_AGENT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml  requirements-sync.yml  ruleset-sync.yml
benchmarks/output/: REPORT.md  benchmarks.json
benchmarks/output_memory/: results.csv  results.json
benchmarks/output_py/: REPORT.md  benchmarks.json
docs/: semantic_release.md
examples/sakila/: 01_load_table.md  02_gsi_query.md  03_associations.md  04_has_many_through.md  05_pagination.md  README.md  build_sakila.py  schema.yml
examples/sakila/python/: 01_load_table.py  (+5 more)
features/: environment.py
features/associations/: belongs_to.feature  has_many.feature  has_many_through.feature  self_referential.feature
features/benchmarks/: benchmark_scenarios.feature  ec2_benchmarking.feature  fixture_generation.feature  full_text_corpus_bbc.feature  search_benchmarks.feature  search_memory.feature
features/cache/: cache_check.feature  cache_invalidation.feature  incremental_refresh.feature  warm_reindex.feature
features/cli/: query_mode.feature  server_mode.feature
features/concurrency/: concurrent_read_write.feature  concurrent_reads.feature  concurrent_refresh.feature  concurrent_writes.feature  file_race_conditions.feature  referential_integrity_under_load.feature
features/core/: database_python_backend.feature  database_python_paths.feature  database_schema_dict.feature  table_count.feature  table_creation.feature  table_crud.feature  table_describe.feature  table_event_hooks.feature  table_export.feature  table_file_persistence.feature  table_gsi_integration.feature  table_validation.feature
features/gsi/: gsi_creation.feature  gsi_operations.feature  gsi_query.feature
features/query/: database_describe.feature  database_validate.feature  execute_basic.feature  execute_indexed.feature  execute_nested.feature  execute_pagination.feature
features/schema/: schema_from_yaml.feature
features/search/: index_persistence.feature  search_query.feature  searchable_fields.feature
features/smoke/: smoke_test.feature
features/sort/: sort_conditions.feature
features/steps/: associations_steps.py  benchmark_steps.py  cache_steps.py  cli_steps.py  concurrency_steps.py  database_python_paths_steps.py  database_python_steps.py  database_steps.py  gsi_steps.py  schema_dict_steps.py  smoke_steps.py  sort_steps.py  table_steps.py
features/storage/: index_only_default.feature  index_only_queries.feature
infra/ec2_bench/: app.py  cdk.json  stack.py
infra/github-rulesets/: main-branch-protection.json
project/.cache/: index.json
project/events/: 2026-02-21T16:42:06.887Z__c85c40c1-8ff7-475a-b167-83e6d9c17c6c.json  2026-02-21T16:42:28.197Z__b6e8f1c4-be16-490d-8b25-971cb90fb4d8.json  2026-02-21T16:42:28.360Z__057f7d02-d432-488c-9bcc-4facc45aa2c9.json  2026-02-21T16:42:28.521Z__586e7ba0-1ced-4bb2-9a78-dd52c1354404.json  2026-02-21T16:42:28.668Z__321c657c-6698-466f-bfec-596837c9344f.json  2026-02-21T16:42:28.816Z__ef297217-c0a7-4cd4-81cb-d2491cfc39cf.json  2026-02-21T16:42:28.963Z__9721aee6-7eff-4ae3-b064-89649a8c7035.json  2026-02-21T16:42:29.113Z__f3465d35-3f1a-43b4-b57d-ce2c86a57f92.json  2026-02-21T16:42:29.266Z__879a5318-c598-4f15-9b2a-448be4e05751.json  2026-02-21T16:42:29.400Z__f8985dd6-ba9a-408c-bb9b-f73a0e0a4f39.json  2026-02-21T16:42:29.540Z__4bde229a-239f-452c-b9a6-d5c3aefbf6a7.json  2026-02-21T16:42:45.728Z__4dc4a7f5-989d-4798-b906-d77a64dbc42d.json  (+832 more)
python/: .coveragerc  behave.ini  pyproject.toml  requirements-dev.txt  requirements.txt
python/src/virtuus/: __init__.py
python/src/virtuus/_python/: __init__.py  database.py  gsi.py  sort.py  table.py
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: database.rs  gsi.rs  lib.rs  python.rs  search.rs  sort.rs  table.rs
rust/tests/: cache_steps.rs  cucumber.rs
tools/: aggregate_storage_results.py  bench_cold_start.py  bench_cold_start_charts.py  bench_compare.py  bench_memory.py  bench_storage_mode_charts.py  check_ec2_params.py  check_spec_parity.py  ec2_bench_status.py  ec2_params.example.json  pull_cold_results_s3.py  pull_storage_results_s3.py  render_storage_gallery.py  run_ec2_from_params.py  run_ec2_storage_benchmarks.py  run_python_benchmarks.py  run_storage_mode_benchmarks.py  sync_bench_results.py
(+1624 files in other folders)
