[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtuus"
version = "1.0.3"
description = "File-backed in-memory indexed table engine"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/virtuus"]

[project.optional-dependencies]
dev = [
    "behave>=1.2.6",
    "coverage[toml]>=7.0",
    "black>=24.0",
    "ruff>=0.3",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
# Step definitions and test helpers are not public API — no docstrings required.
"../features/steps/*.py" = ["D"]
"../features/environment.py" = ["D"]
