[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "virtuus"
version = "0.4.3"
description = "File-backed in-memory indexed table engine"
requires-python = ">=3.9,<4.0"
dependencies = ["pyyaml>=6.0"]

[tool.poetry]
packages = [{ include = "virtuus", from = "src" }]

[tool.poetry.group.dev.dependencies]
behave = ">=1.2.6"
coverage = { version = ">=7.0", extras = ["toml"] }
black = ">=24.0"
ruff = ">=0.3"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
# Step definitions and test helpers are not public API — no docstrings required.
"../features/steps/*.py" = ["D"]
"../features/environment.py" = ["D"]
