[package]
name = "virtuus"
version = "0.1.0"
edition = "2021"
description = "File-backed in-memory indexed table engine"

[lib]
name = "virtuus"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "virtuus"
path = "src/bin/virtuus.rs"

[[test]]
name = "cucumber"
harness = false

[dependencies]
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.21", features = ["extension-module", "serde"], optional = true }
pythonize = { version = "0.21", optional = true }
serde_json = "1"
serde_yaml = "0.9"
libc = "0.2"

[features]
python = ["pyo3", "pythonize"]

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
assert-json-diff = "2.0"
tempdir = "0.3"
filetime = "0.2"
