[package]
name = "virtuus"
version = "0.4.3"
edition = "2021"
description = "File-backed in-memory indexed table engine"
license = "MIT"
repository = "https://github.com/AnthusAI/Virtuus"
homepage = "https://github.com/AnthusAI/Virtuus"
readme = "README.md"
keywords = ["database", "gsi", "in-memory", "json", "table"]
categories = ["database", "command-line-utilities"]

[lib]
name = "virtuus"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "virtuus"
path = "src/bin/virtuus.rs"

[[test]]
name = "cucumber"
harness = false

[dependencies]
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.24", features = ["extension-module", "serde"], optional = true }
pythonize = { version = "0.24", optional = true }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
libc = "0.2"
rayon = "1"

[features]
python = ["pyo3", "pythonize"]

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
assert-json-diff = "2.0"
filetime = "0.2"
