[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "virtuus"
version = "0.1.0"
description = "File-backed in-memory indexed table engine"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[tool.maturin]
module-name = "virtuus._rust"
python-source = "../python/src"
features = ["python"]
